# VigiTool

./: .gitignore  CLAUDE.md  KNOWN_ISSUES.md  MIGRATION_PLAN.md  QUESTIONS_FOR_PI.md  QUESTIONS_INTEGRATION.md  README.md  REQUIREMENTS.md  REQUIREMENTS_INTEGRATION.md  pyproject.toml
.claude/: settings.json
.claude/agents/: compliance.md  e2e-test.md  sme.md
.github/workflows/: ci.yml
legacy/: README_COMPLETE.md  digit_vigilance_WORKING.py
src/: QUICK_START_COMPLETE.md  analyze_data.py  cvt_task.py  pvt_task.py  pvt_task_WORKING.py
tests/: test_cvt_trials.py  test_pvt_metrics.py
